; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/mtd/maps/extr_octagon-5066.c_oct5066_write8.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/mtd/maps/extr_octagon-5066.c_oct5066_write8.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.map_info = type { i32 }
%struct.TYPE_3__ = type { i32* }

@oct5066_spin = common dso_local global i32 0, align 4
@iomapadr = common dso_local global i64 0, align 8
@WINDOW_MASK = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.map_info*, i32*, i64)* @oct5066_write8 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @oct5066_write8(%struct.map_info* %0, i32* %1, i64 %2) #0 {
  %4 = alloca %struct.TYPE_3__, align 8
  %5 = alloca %struct.map_info*, align 8
  %6 = alloca i64, align 8
  %7 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %4, i32 0, i32 0
  store i32* %1, i32** %7, align 8
  store %struct.map_info* %0, %struct.map_info** %5, align 8
  store i64 %2, i64* %6, align 8
  %8 = call i32 @spin_lock(i32* @oct5066_spin)
  %9 = load %struct.map_info*, %struct.map_info** %5, align 8
  %10 = load i64, i64* %6, align 8
  %11 = call i32 @oct5066_page(%struct.map_info* %9, i64 %10)
  %12 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %4, i32 0, i32 0
  %13 = load i32*, i32** %12, align 8
  %14 = getelementptr inbounds i32, i32* %13, i64 0
  %15 = load i32, i32* %14, align 4
  %16 = load i64, i64* @iomapadr, align 8
  %17 = load i64, i64* %6, align 8
  %18 = load i64, i64* @WINDOW_MASK, align 8
  %19 = and i64 %17, %18
  %20 = add i64 %16, %19
  %21 = call i32 @writeb(i32 %15, i64 %20)
  %22 = call i32 @spin_unlock(i32* @oct5066_spin)
  ret void
}

declare dso_local i32 @spin_lock(i32*) #1

declare dso_local i32 @oct5066_page(%struct.map_info*, i64) #1

declare dso_local i32 @writeb(i32, i64) #1

declare dso_local i32 @spin_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
